# root-subvol-snapshot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  root-subvol-snapshot.service  snapshot
.github/workflows/: python-ci.yml  python-publish.yml
screencasts/: general-introduction.sh
src/root_subvol_snapshot/: cli.py
tests/: conftest.py  test_backup_backends.py  test_cli.py
tests/config_parser/: test_btrfs_config.py  test_parse_configuration.py  test_restic_config.py
