[tool.poetry]
name = "root-subvol-snapshot"
version = "0.1.0"
description = "Create snapshots of subvolumes for disaster recovery"
authors = ["Max Görner <5477952+MaxG87@users.noreply.github.com>"]
license = "GPL v3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
shell-interface = "^0.10.0"
storage-device-managers = "^0.11.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.0.275"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
depr = "^0.2.1"
pynvim = "^0.4.3"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
