[tool.poetry]
name = "root-subvol-snapshot"
version = "0.2.0"
description = "Create snapshots of subvolumes for disaster recovery"
authors = ["Max Görner <5477952+MaxG87@users.noreply.github.com>"]
license = "GPL v3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
shell-interface = "^0.10.0"
storage-device-managers = "^0.11.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
depr = "^0.2.1"
pynvim = "^0.5.0"
black = "^24.1.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
