[tool.poetry]
name = "root-subvol-snapshot"
version = "0.2.0"
description = "Create snapshots of subvolumes for disaster recovery"
authors = ["Max Görner <5477952+MaxG87@users.noreply.github.com>"]
license = "GPL v3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
loguru = "^0.7.2"
pydantic = "^2.8.2"
rich = {version = "^13.7.1", optional = true}
shell-interface = "^0.13.0"
storage-device-managers = "^0.14.0"
typer = "^0.12.3"

[tool.poetry.extras]
# In fact, `typer[all]` would be preferred, but Poetry does not support to have
# optional extras of dependencies.
all = ["rich"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
depr = "^0.2.1"
hypothesis = "^6.108.4"
mypy = "^1.11.0"
pdbpp = "^0.10.3"
pynvim = "^0.5.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.4"

[tool.poetry.scripts]
snapshots = "root_subvol_snapshot.cli:cli"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]
allow_any_unimported = false
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "possibly-undefined"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
    "--cov", "src",
    "--cov-branch",
    "--cov-fail-under", "85"
]
testpaths = ["tests"]

[tool.ruff]
src = [".", "src/"]

[tool.ruff.lint]
select = ["A", "B", "C", "F", "I", "ISC", "PIE", "PL", "Q", "RUF", "SIM", "TID", "W", "YTT"]
ignore = ["E", "PLC1901", "SIM117"]
mccabe.max-complexity = 6


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
